--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "سورس ميوزك",
+    "name": "سورس روني ميوزك",
     "description": "Telegram bot for Streaming Video & Music trought the Telegram Group Video Chat, powered by pytgcalls and pyrogram",
     "logo": "https://telegra.ph/file/cbefab50d720cd7cb5ca8.jpg",
     "keywords": [
