--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "pyrogram"
     ],
     "website": "https://t.me/bm0_c",
-    "repository": "https://github.com/alfaransy/Sources",
+    "repository": "https://github.com/rone1233/Music_Rony",
     "success_url": "https://t.me/lllio5",
     "env": {
         "API_ID": {
